--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "aquiContraseña",
+    "password": "tormentor",
     "database": "db_mikhuna",
     "host": "127.0.0.1",
     "dialect": "mysql",
@@ -9,14 +9,14 @@
   },
   "test": {
     "username": "root",
-    "password": "aquiContraseña",
+    "password": "tormentor",
     "database": "db_mikhuna_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": "aquiContraseña",
+    "password": "tormentor",
     "database": "db_mikhuna_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
