--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "Aplicacion de fin de curso CodiGO - TECSUP",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Jorgefebres/mikhunapp.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [
     "mikhuna",
@@ -32,6 +29,7 @@
     "connect-multiparty": "^2.2.0",
     "express": "^4.16.4",
     "mysql2": "^1.6.4",
+    "nodemon": "^1.18.9",
     "sequelize": "^4.42.0"
   }
 }
