--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "Aplicacion de fin de curso CodiGO - TECSUP",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Jorgefebres/mikhunapp.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [
     "mikhuna",
