--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "uzpilqmzlatcxxx7751a",
-    "password": "fYAiVCDiUmSTERIbRd15",
-    "database": "bk3azyeay9rhicr9rwmz",
-    "host": "bk3azyeay9rhicr9rwmz-mysql.services.clever-cloud.com",
+    "username": "root",
+    "password": "admin",
+    "database": "mikhuna",
+    "host": "127.0.0.1",
     "dialect": "mysql",
     "operatorsAliases": false
   },
@@ -15,7 +15,7 @@
     "dialect": "mysql",
     "operatorsAliases": false
   },
-  "produccion": {
+  "production": {
     "username": "uzpilqmzlatcxxx7751a",
     "password": "fYAiVCDiUmSTERIbRd15",
     "database": "bk3azyeay9rhicr9rwmz",
